initial working auth, Still need to make signup pretty

--- a/app/src/app/components/navbar/navbar.component.html
+++ b/app/src/app/components/navbar/navbar.component.html
@@ -8,11 +8,11 @@
     <span class="example-spacer"></span>
 
 <!--  TODO: Implement Account Creation  -->
-    <button mat-icon-button routerLink="/coming-soon">
+    <button mat-icon-button routerLink="/signup">
       Join
     </button>
     <span class="example-small-spacer"></span>
-    <button mat-icon-button routerLink="/coming-soon">
+    <button mat-icon-button routerLink="/signin">
       <span>Login </span>
       <i class="fas fa-sign-in-alt"></i>
     </button>
