new dashboard updates

--- a/app/src/app/app.component.html
+++ b/app/src/app/app.component.html
@@ -3,7 +3,7 @@
   <app-navbar></app-navbar>
 </div>
 
-<div class="content" role="main">
+<div class="content" style="width: 100%" role="main">
 
   <router-outlet></router-outlet>
 
