--- a/app/src/app/components/navbar/navbar.component.html
+++ b/app/src/app/components/navbar/navbar.component.html
@@ -2,19 +2,25 @@
   <mat-toolbar-row>
     <span><a href="#" style="color: white;" routerLink="/#">AWS GLORY</a></span>
     <span class="example-spacer"></span>
-    <span><button mat-button routerLink="/leaderboards">Leader Boards</button></span>
+    <span><button mat-button routerLink="/leaderboards">Leaderboards</button></span>
     <span class="example-spacer"></span>
     <span><button mat-button routerLink="/milestones">Major Milestones</button></span>
     <span class="example-spacer"></span>
 
-<!--  TODO: Implement Account Creation  -->
-    <button mat-icon-button routerLink="/signup">
+    <button *ngIf="!isLoggedIn()" mat-icon-button routerLink="/signup">
       Join
     </button>
     <span class="example-small-spacer"></span>
-    <button mat-icon-button routerLink="/signin">
+    <button *ngIf="isLoggedIn()" mat-icon-button routerLink="/dashboard">
+      My Account
+    </button>
+    <span class="example-small-spacer"></span>
+    <button *ngIf="!isLoggedIn()" mat-icon-button routerLink="/signin">
       <span>Login </span>
       <i class="fas fa-sign-in-alt"></i>
+    </button>
+    <button *ngIf="isLoggedIn()" (click)="logOut()" mat-icon-button routerLink="/signin">
+      Log out
     </button>
     <span class="example-small-spacer"></span>
   </mat-toolbar-row>
