--- a/app/src/app/components/progress-table/progress-table.component.html
+++ b/app/src/app/components/progress-table/progress-table.component.html
@@ -11,10 +11,12 @@
     </ng-container>
 
     <ng-container *ngFor="let certificate of certs">
-      <ng-container matColumnDef="{{certificate.name}}">
-        <th mat-header-cell *matHeaderCellDef>{{certificate.name}}<br>({{certificate.level}})</th>
-        <ng-container>
-          <td mat-cell *matCellDef="let element">{{participantHasCertificate(element, certificate)}}</td>
+      <ng-container matColumnDef="{{certificate.certificateName}}">
+        <th mat-header-cell *matHeaderCellDef>{{certificate.certificateName}}<br>({{certificate.level}})</th>
+        <ng-container style="align-content: center;">
+          <td mat-cell *matCellDef="let element"> 
+            <img *ngIf="participantHasCertificate(element, certificate)" onerror="this.onerror=null; this.src='../../../assets/COMING_SOON_GOPHER.png'" style="height: 55px; width: 55px;" src="../../../assets/{{certificate.id}}.png">
+          </td>
         </ng-container>
       </ng-container>
     </ng-container>
