--- a/app/src/app/components/dashboard/dashboard.component.scss
+++ b/app/src/app/components/dashboard/dashboard.component.scss
@@ -19,3 +19,12 @@ mat-card-header {
   margin-left: 5px;
   margin-bottom: 5px;
 }
+
+table {
+  width: 100%;
+}
+
+.table-holder {
+  width: 1500px;
+}
+
